tests/ui/unsafe/unsafe-trait-impl.stderr
error[E0053]: method `len` has an incompatible type for trait
  --> $DIR/unsafe-trait-impl.rs:10:5
   |
LL |     fn len(&self) -> u32 { *self }
   |     ^^^^^^^^^^^^^^^^^^^^ expected unsafe fn, found safe fn
   |
note: type in trait
  --> $DIR/unsafe-trait-impl.rs:6:5
   |
LL |     unsafe fn len(&self) -> u32;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: expected signature `unsafe fn(&_) -> _`
              found signature `fn(&_) -> _`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0053`.
